--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ layout: default
       {% assign categories = site.categories | sort %}
       {% for category in categories %}
       <h3>On {{ category | first }}</h3>
-      <p>{% for posts in category %} {% for post in posts %}
-            <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>{% if forloop.last == false %},&nbsp;&nbsp;{% endif %}
+            <p>{% for posts in category %} {% for post in posts %}
+            <a class="chinese" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>{% if forloop.last == false %},&nbsp;&nbsp;{% endif %}
         {% endfor %} {% endfor %}  </p>
       {% endfor %}
-    </div>
+          </div>
   </div>
 </div>
